# store-layout-web

./: BRD.md  README.md  implement_img_input.md  integrate_ollama.md  main.py  pyproject.toml  sample_sales_data.csv  shelf_analysis_2026-03-23.json  shelf_efficiency_2026-03-20.csv  shelf_efficiency_2026-03-21.csv  shelf_layout_2026-03-20.json  shelf_layout_2026-03-21.json
.qwen/: PROJECT_SUMMARY.md
static/css/: styles.css
static/js/: app.js
templates/: index.html
