[project]
name = "store-layout-web"
version = "0.1.0"
description = "Store Product Sales Efficiency Analysis Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "uvicorn>=0.38.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "pillow>=10.0.0",
]
